# pytest-requires

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest_requires.py  setup.cfg  setup.py
.github/workflows/: build.yml
tests/: test_requires.py
