[metadata]
name = pytest-requires
version = attr: pytest_requires.__version__
author = Duncan Macleod
author_email = duncanmmacleod@gmail.com
maintainer = Duncan Macleod
maintainer_email = duncanmmacleod@gmail.com
license = MIT
license_files = LICENSE
description = A pytest plugin to elegantly skip tests with optional requirements
long_description = file: README.md
long_description_content_type = text/markdown
# urls
url = https://github.com/duncanmmacleod/pytest-requires
project_urls =
	Bug Tracker = https://github.com/duncanmmacleod/pytest-requires/issues
	Source Code = https://github.com/duncanmmacleod/pytest-requires
# classifiers
classifiers =
	Development Status :: 4 - Beta
	Framework :: Pytest
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Testing

[options]
# contents
py_modules =
	pytest_requires
# requirements
python_requires = >= 3.5
install_requires =
	pytest >= 3.5.0

[options.entry_points]
pytest11 =
	requires = pytest_requires

# -- tools ------------------

[flake8]
exclude =
	.eggs/,
	build/,
